correction small bugs linked to previous commit in admin visualization

--- a/src/front/page/styles.module.css
+++ b/src/front/page/styles.module.css
@@ -1,7 +1,3 @@
-main {
-  min-height: calc(100vh - 75px);
-}
-
 .carousel {
   height: 100%;
   width: 100%;
@@ -24,7 +20,6 @@ main {
   margin-bottom: 15px;
 }
 .bloc {
-  height: fit-content;
   margin-bottom: 30px;
 }
 .blocs_container {
